# demo-dds

./: .gitignore  CMakeLists.txt  Dockerfile  ObjectState.idl  README.md  docker-compose.yml
config/: fastdds_statistics_profiles.xml
publisher/: PublisherApp.cpp  PublisherApp.h  main.cpp
subscriber/: SubscriberApp.cpp  SubscriberApp.h  main.cpp
